2016-09-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi): Don't store the line 
	number for a command defined with @definfoenclose, even if it 
	was previously a built-in command.
	(_parse_line_command_args) <@definfoenclose>: Add a comment 
	warning about redefining a built-in command.

2016-09-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Documentlanguages.pm: Regenerate by running
	maintain/regenerate_documentlanguages.pl.
	* README-hacking: Mention running this command for a new 
	release.

2016-09-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_check_contents_location): Remove unused 
	function.

2016-09-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_special_misc_command): Change
	"a @-command" to "an @-command" in a message.
	(_parse_line_command_args): Comment changed.

2016-09-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (_compute_spaces_align_line):
	Change a ">" to a ">=" to avoid the possibility of a negative 
	return value when $line_width equals $max_column exactly.  Error 
	message "Negative repeat count does nothing" reported by
	Paul Eggert.

2016-09-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_virtual_index): Put text within a
	call to gettext so that it can be translated.

2016-09-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\definefontsetatsize): New macro to reduce 
	repetition in \textfonts, \titlefonts etc.
	(\reducedrm): Comment changed.

2016-09-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\ifrmisbold): Define with \newif.
	(\switchtolsize, \switchtolllsize): Define for each font size.  
	If \ifrmisbold is true, override \rmfont with \bffont.  This 
	guarantees that the roman font will be overridden, instead of 
	having to call \rmisbold everywhere large font sizes are used.
	It also ensures that superscripts are in bold for large font 