@@ -1937,66 +1937,66 @@ $result_menus{'def_syn_indices'} = {
 
 $result_errors{'def_syn_indices'} = [
   {
-    'error_line' => ':39: warning: printing an index `ky\' merged in another one `pg\'
+    'error_line' => ':39: warning: printing an index `ky\' merged in another one, `pg\'
 ',
     'file_name' => '',
     'line_nr' => 39,
     'macro' => '',
-    'text' => 'printing an index `ky\' merged in another one `pg\'',
+    'text' => 'printing an index `ky\' merged in another one, `pg\'',
     'type' => 'warning'
   },
   {
-    'error_line' => ':42: warning: printing an index `truc\' merged in another one `fn\'
+    'error_line' => ':42: warning: printing an index `truc\' merged in another one, `fn\'
 ',
     'file_name' => '',
     'line_nr' => 42,
     'macro' => '',
-    'text' => 'printing an index `truc\' merged in another one `fn\'',
+    'text' => 'printing an index `truc\' merged in another one, `fn\'',
     'type' => 'warning'
   },
   {
-    'error_line' => ':45: warning: printing an index `truc\' merged in another one `fn\'
+    'error_line' => ':45: warning: printing an index `truc\' merged in another one, `fn\'
 ',
     'file_name' => '',
     'line_nr' => 45,
     'macro' => '',
-    'text' => 'printing an index `truc\' merged in another one `fn\'',
+    'text' => 'printing an index `truc\' merged in another one, `fn\'',
     'type' => 'warning'
   },
   {
-    'error_line' => ':48: warning: printing an index `cp\' merged in another one `fn\'
+    'error_line' => ':48: warning: printing an index `cp\' merged in another one, `fn\'
 ',
     'file_name' => '',
     'line_nr' => 48,
     'macro' => '',
-    'text' => 'printing an index `cp\' merged in another one `fn\'',
+    'text' => 'printing an index `cp\' merged in another one, `fn\'',
     'type' => 'warning'
   },
   {
-    'error_line' => ':51: warning: printing an index `cp\' merged in another one `fn\'
+    'error_line' => ':51: warning: printing an index `cp\' merged in another one, `fn\'
 ',
     'file_name' => '',
     'line_nr' => 51,
     'macro' => '',
-    'text' => 'printing an index `cp\' merged in another one `fn\'',
+    'text' => 'printing an index `cp\' merged in another one, `fn\'',
     'type' => 'warning'
   },
   {
-    'error_line' => ':54: warning: printing an index `defg\' merged in another one `pg\'
+    'error_line' => ':54: warning: printing an index `defg\' merged in another one, `pg\'
 ',
     'file_name' => '',
     'line_nr' => 54,
     'macro' => '',
-    'text' => 'printing an index `defg\' merged in another one `pg\'',
+    'text' => 'printing an index `defg\' merged in another one, `pg\'',
     'type' => 'warning'
   },
   {
-    'error_line' => ':57: warning: printing an index `abc\' merged in another one `defg\'
+    'error_line' => ':57: warning: printing an index `abc\' merged in another one, `defg\'
 ',
     'file_name' => '',
     'line_nr' => 57,
     'macro' => '',
-    'text' => 'printing an index `abc\' merged in another one `defg\'',
+    'text' => 'printing an index `abc\' merged in another one, `defg\'',
     'type' => 'warning'
   }
 ];
