@@ -472,12 +472,12 @@ $result_menus{'double_syncodeindex'} = {
 
 $result_errors{'double_syncodeindex'} = [
   {
-    'error_line' => ':10: warning: printing an index `cp\' merged in another one `fn\'
+    'error_line' => ':10: warning: printing an index `cp\' merged in another one, `fn\'
 ',
     'file_name' => '',
     'line_nr' => 10,
     'macro' => '',
-    'text' => 'printing an index `cp\' merged in another one `fn\'',
+    'text' => 'printing an index `cp\' merged in another one, `fn\'',
     'type' => 'warning'
   }
 ];
