@@ -204,12 +204,12 @@ $result_menus{'print_merged_index'} = {
 
 $result_errors{'print_merged_index'} = [
   {
-    'error_line' => ':3: warning: printing an index `fn\' merged in another one `cp\'
+    'error_line' => ':3: warning: printing an index `fn\' merged in another one, `cp\'
 ',
     'file_name' => '',
     'line_nr' => 3,
     'macro' => '',
-    'text' => 'printing an index `fn\' merged in another one `cp\'',
+    'text' => 'printing an index `fn\' merged in another one, `cp\'',
     'type' => 'warning'
   }
 ];
